overflow correction

--- a/style/background.css
+++ b/style/background.css
@@ -1,7 +1,7 @@
 .main-structure {
     position: absolute;
     min-width: 100%;
-    min-height: 100%;
+    /* min-height: 100%; */
     top: 0;
     Left: 0;
 
