--- a/style/general.css
+++ b/style/general.css
@@ -19,7 +19,6 @@
     --card-black: #232029;
     --card-black-2: #221e28;
     --card-black-3: #1b1820;
-
-
+    --card-bg: #312c39;
 
 }
