--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,7 +1,6 @@
 .nav-bar {
     background: var(--black-1);
     width: 100%;
-    margin-bottom: var(--margin-bottom);
     display: flex;
     flex-direction: row;
     box-shadow: 0 0 10px #000;
@@ -12,7 +11,6 @@
     position: sticky;
     z-index: 10;
     top: 0;
-
 }
 
 .nav-right {
