--- a/style/who-am-I.css
+++ b/style/who-am-I.css
@@ -6,16 +6,22 @@
 
     /* background-color: green; */
     max-width: 100%;
+    /* min-height: 100vh; */
+    /* background-color: red */
+    padding-block: 10vh;
 }
 
 .who-am-i {
     display: flex;
     justify-content: center;
     max-width: 100%;
+    /* background-color: red; */
 }
 
 .who-am-i-box {
-    margin: 10%;
+    margin-inline: 10%;
+    margin-block: 20%;
+
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -23,7 +29,7 @@
 
     border-radius: 2rem;
 
-    background-color: var(--card-black);
+    background-color: var(--card-bg);
     box-shadow:
         inset 1px 0px 10px 1px var(--pink),
         inset 5px 0px 5px 1px var(--violet-1);
